fixed alignment

--- a/style.css
+++ b/style.css
@@ -16,7 +16,3 @@ p {
     
 }
 
-#page{
-width:750px;
-margin:auto;
-}
